--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -229,20 +229,93 @@ University of Mannheim, Germany \\
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
+There are many case studies for which the formulation of RDF constraints and the validation of RDF data conforming to these constraint is very important.  
+The W3C and the DCMI working groups on RDF validation identified many RDF validation requirements,
+whereupon we initiate an RDF validation requirements database which is available to contribute at \url{http://purl.org/net/rdf-validation}.
+The intention of this database is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation.
+Although, there are multiple constraint languages which can be used to formulate RDF constraints (associated with these requirements), 
+there is no standard way to formulate RDF constraints.
 
+This paper serves to evaluate to which extend each requirement is satisfied by each of these constraining languages.
+We take reasoning into account as a pre-validation step and distinguish between OWL 2 QL and OWL 2 DL constructs to express particular constraints.
+We classify constraints according to a developed classification mechanism for constraints.
+We show that each constraint can be mapped to an ontology describing RDF constraints generically.
+If a constraint can be expressed in DL, we add the mapping to DL and to the generic constraint in order to logically underpin associated requirements.
+If a constraint cannot be expressed in DL, we only add the mapping to the generic constraint.
 
-\keywords{..}
+\keywords{RDF Validation, RDF Validation Requirements, RDF Constraints, Constraint Languages, Evaluation, Linked Data, Semantic Web}
 \end{abstract}
 %
 
 % ---------------
 
+\section{Introduction}
+
+\tb{why is the references section not shown? / references are not resolved}
+
+The purpose of ontologies is to perform reasoning on RDF data and not to validate RDF data conforming to these ontologies.
+For RDF, we cannot use ontologies like we use XML Schemas, DTDs, RELAX NG, or Schematron to validate XML documents.
+The W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
+where experts from industry, government, and academia discussed first use cases for RDF constraint formulation and validation.
+In 2014, two working groups on RDF validation have been established: 
+the W3C RDF Data Shapes WG\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles WG\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
+
+Bosch and Eckert \cite{BoschEckert2014} collected the findings of these working groups and initiated a database of requirements to formulate and validate RDF constraints
+which is available for contribution at \url{http://purl.org/net/rdf-validation}.
+The intention associated with this database is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation in a comprehensive and structured way. 
+The requirements are classified to better evaluate existing solutions. 
+We mapped each requirement to formulate RDF constraints directly to an RDF constraint.
+
+There is no constraint language which can be seen as the standard.
+Although, there are multiple constraint languages (having different syntaxes and semantics) which can be used to express RDF constraints, such as existential and universal quantification, cardinality restrictions, and exclusive or of properties.
+The five most promising ones on being the standard are
+Description Set Profiles (DSP)\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}},
+Resource Shapes (ReSh)\footnote{\url{http://www.w3.org/Submission/shapes/}}, 
+Shape Expressions (ShEx)\footnote{\url{http://www.w3.org/Submission/shex-primer/}},
+the SPARQL Inferencing Notation (SPIN)\footnote{\url{http://spinrdf.org/}}, 
+and the Web Ontology Language (OWL 2)\footnote{\url{http://www.w3.org/TR/owl2-syntax/}}.
+
 \section{Motivation}
 
+In this paper, we describe each requirement within the RDF validation requirements database in detail (sections 3-76).
+Each requirement corresponds to an RDF constraint which may be expressible by multiple constraint languages.
+For each requirement, we represent some examples in different constraint languages.
+
+We evaluated to which extend the most promising five constraint languages fulfill each of the overall 74 requirements to formulate RDF constraints (section \ref{sec:evaluation-1}).
+We distinguished if a constraint is fulfilled by OWL 2 QL or if the more expressive OWL 2 DL is needed. 
+We also take reasoning into account, as reasoning may be performed prior to validating constraints.
+
+In order to define an ontology to describe RDF constraints generically, it is needed to define the terminology for the formulation of RDF constraints and to classify them. 
+A \ms{constraint language} is a language which is used to formulate constraints.
+The W3C Data Shapes working group defines \ms{constraint} as a component of a schema what needs to be satisfied\footnote{\url{https://www.w3.org/2014/data-shapes/wiki/Glossary}}.
+We identified four dimensions to classify constraints:
 \begin{itemize}
-	\item mappings from RDF validation requirements (more specifically RDF constraint formulation requirements) to DL
-	\item mappings from RDF validation requirements (more specifically RDF constraint formulation requirements) to generic constraints (expressed by generic constraint language)
+  \item \ms{Universality:} specific constraints vs. generic constraints
+	\item \ms{Complexity:} simple constraints vs. complex constraints
+	\item \ms{Context:} property constraints vs. class constraints
+	\item \ms{DL Expressivity:} constraints expressible in DL vs. constraints not expressible in DL
 \end{itemize}
+
+As there are already five promising constraint languages, our purpose is not to invent a new constraint language.
+We rather developed a very simple ontology (only three classes, three object properties, and three data properties) which is universal enough to describe any RDF constraint expressible by any RDF constraint language.
+We call this ontology the \ms{RDF constraints ontology (RDF-CO)}\footnote{Available at: \url{https://github.com/boschthomas/RDF-constraints-ontology}}.
+
+\ms{Specific constraints} are expressed by specific constraint languages like DSP, OWL 2, ReSh, ShEx, and SPIN.
+\ms{Generic constraints} are expressed by the RDF-CO.
+As RDF-CO describes constraints generically, RDF-CO does not distinguish constraints according to the dimension \ms{universality}. 
+The majority of constraints can be expressed in DL.
+In contrast, there are constraints which cannot be expressed in DL, but are also representable by the RDF-CO. 
+\ms{Complex constraints} encompass \ms{simple constraints} (atomic constraints) and/or further complex constraints.
+DL statements representing complex constraints are created out of DL statements representing composed constraints (if expressible in DL). 
+Simple constraints may be applied to either properties (\ms{properties constraints}) or classes (\ms{class constraints}).
+There are no terms representing simple and complex constraints in the RDF-CO, since context classes (associated simple constraints hold for individuals of these classes) of simple constraints may just be reused by further constraints.
+As a consequence, the distinction of property and class constraints is sufficient to describe all possible RDF constraints.
+
+In this paper, we investigate which constraints can be expressed in DL and which not.
+If a constraint can be expressed in DL, we added the mapping to DL and to the generic constraint in order to logically underpin associated requirements.
+If a constraint cannot be expressed in DL, we only added the mapping to the generic constraint.
+Therefore, we show that each constraint can be mapped to a generic constraint.
+In section \ref{sec:evaluation-2} we classify the constraints according to the dimensions to classify constraints.
 
 \section{Subsumption}
 
@@ -4090,7 +4163,10 @@ property & C & p & q & - & count & - \\
 
 \section{Evaluation}
 
-We evaluated to which extend the most promising five DSCLs fulfill each requirement.
+\subsection{Evaluation of Constraint Languages}
+\label{sec:evaluation-1}
+
+We evaluated to which extend the most promising five constraint languages fulfill each requirement.
 Tilde means that this constraint may be fulfilled by that particular constraint language - either by limitations, workarounds, or extensions.
 We also evaluated if a specific constraint is fulfilled by OWL 2 QL or if the more expressive OWL 2 DL is needed. 
 Inferencing may be performed prior to validating constraints. This is marked with an asterisk.
@@ -4175,7 +4251,14 @@ Value is Valid for Datatype & \ding{55} & \ding{55} & \ding{55} & \ding{55} & \d
 Aggregations & \ding{55} & \ding{55} & \ding{55} & \ding{55} & \ding{55} & $\checkmark$ \\
 \end{evaluation-overall}
 
-\subsection{Generic Constraints}
+\subsection{Evaluation of Constraints Classes}
+\label{sec:evaluation-2}
+
+We evaluated to which extend the most promising five constraint languages fulfill each of the overall 74 requirements to formulate RDF constraints \cite{BoschNolleAcarEckert2015}.
+If a constraint can be expressed in DL, we added the mapping to DL and to the generic constraint.
+If a constraint cannot be expressed in DL, we only added the mapping to the generic constraint.
+Therefore, we show that each constraint can be mapped to a generic constraint.
+The following table shows the absolute numbers and the relative percentages for each of the three dimensions to classify constraints:
 
 \begin{evaluation-generic-overview}
 Property Constraints & 48 & 65 (64.86) \\
@@ -4279,6 +4362,14 @@ Value is Valid for Datatype & $\checkmark$ & $\checkmark$ & \ding{55} \\
 Aggregations & $\checkmark$ & $\checkmark$ & \ding{55} \\ 
 \end{evaluation-generic}
 
+Constraints can be classified as \ms{property constraints} and \ms{class constraints}.
+Two thirds of the total amount of constraints are property constraints, one fifth are class constraints, and approx. 10\% are composed of both property and class constraints.
+Constraints may be either atomic (\ms{simple constraints}) or created out of simple and/or complex constraints (\ms{complex constraints}).
+Almost two thirds are simple constraints, a quarter are complex constraints.
+Almost 15 percent are complex constraints which can be formulated as simple constraints when using them in terms of syntactic sugar.
+Constraints can either be expressible in DL or not.
+The majority - nearly 70\% - of the overall constraints are expressible in DL.
+
 %\begin{evaluation-generic}
 %*Subsumption 
 %*Class Equivalence
@@ -4359,9 +4450,9 @@ Aggregations & $\checkmark$ & $\checkmark$ & \ding{55} \\
 %Aggregations 
 %\end{evaluation-generic}
 
-\end{document}
+\section{Conclusion and Future Work}
 
-\input{DL-Check}
+\end{document}
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
