--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -445,7 +445,16 @@ The three \textbf{main contributions} of this paper are:
 \er{We can reserve a paragraph (flowing text) for those  item as well. }
 
 \section{Expressivity and Complexity in OWL 2 Reasoning}
+
 \er{We need a short introduction here.}
+
+\tb{ToDo for Erman: there is also OWL 2 Full, which is not a DL at
+all because its too expressive (therefore has the highest complexity
+class: undecidable), but it HAS reasoning.  We do not mention it all.
+Perhaps, we might at least mention it in a sentence that we will not
+take it into our evaluation because it is this and this, impractical and
+so on.}
+
 \subsection{OWL 2 QL Reasoning}
 
 OWL 2 profiles (or fragments in logic literature) are restricted (sublanguage) versions of OWL 2 that offer different trade-offs regarding expressivity  vs. efficiency in reasoning. There are three main  profiles of OWL 2, which are OWL 2 QL, OWL 2 RL and OWL 2 EL namely, each designed to  be useful for different purposes and application scenarios. The choice of which profile to use is purpose-specific on what to express and to perform the reasoning about. We refer reader to \cite{owl2profiles2008} for a comprehensive treatment of those profiles. 
@@ -1092,13 +1101,6 @@ This OWL semantics, however, was never submitted to a standards organization suc
 In description logics, reasoning tasks like query answering or detection of inconsistencies require the consideration of knowledge that is not only defined explicitly but also implicitly. To do so there are two different ways called forward- and backward-chaining. The first implies a materialized knowledge base, where the original knowledge base is extended by all assertions that can be inferred. State-of-the-art DL or OWL reasoners that following this approach are e.g. FaCT++ \cite{tsarkov2006fact++}, Pellet \cite{sirin2007pellet},  RacerPro \cite{haarslev2001racer}, or HermiT \cite{horrocks2012hermit}. On the second approach, the original knowledge base is kept in its original state and before queries are evaluated against the knowledge base, the queries will be rewritten such that its rewritings will consider also the implicit knowledge in the returned result set. Approaches following this way are e.g., \textsf{PerfectRef} given by Calvanese et al. \cite{Calvanese2007} or \textsf{TreeWitness} proposed by Kontchakov et al. \cite{kontchakov2011combined}. The choice between these two different ways depends on the specific application case. So the first kind is probably applied on local knowledge bases whereas the second is more appropriated for federative environments like in \cite{nolle2014efficient,nolle2013elite}.
 
 \section{Conclusion and Future Work}
-
-\tb{comment of Erman: there is also OWL 2 Full, which is not a DL at
-all because its too expressive (therefore has the highest complexity
-class: undecidable), but it HAS reasoning.  We do not mention it all.
-Perhaps, we might at least mention it in a sentence that we will not
-take it into our evaluation because it is this and this, impractical and
-so on.}
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
